--- a/SemanticTypesRun/MySemanticTypes.tt
+++ b/SemanticTypesRun/MySemanticTypes.tt
@@ -1,5 +1,5 @@
 ﻿<#@ template debug="false" hostspecific="true" language="C#" #>
-<#@ output extension=".cs" #>
+<#@ output extension=".generated.cs" #>
 <#@ include file="..\SemanticTypes\CustomType.ttinclude" #>
 
 <#
