--- a/SemanticTypes/PrefedefinedTypes.tt
+++ b/SemanticTypes/PrefedefinedTypes.tt
@@ -11,7 +11,9 @@ GenerateType("SDouble", "double", true);
 <#+
 void GenerateType(string name, string underlyingType, bool isValueType)
 {
-	string path = Host.ResolvePath("SemanticType.cs");
+	var localDir = Path.GetDirectoryName(Path.GetFullPath(Host.TemplateFile));
+	string path = Path.Combine(localDir, "SemanticType.cs");
+
 	string rawText = File.ReadAllText(path);
 	string text = 
 		rawText
